--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+my<!DOCTYPE html>
 <html>
   <head>
     <meta charset='utf-8'>
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>Jeremyake1.GitHub.io by jeremyake1</title>
+    <title>Jeremy Ake Page</title>
   </head>
 
   <body>
