--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-my<!DOCTYPE html>
+mmy<!DOCTYPE html>
 <html>
   <head>
     <meta charset='utf-8'>
@@ -18,8 +18,8 @@ my<!DOCTYPE html>
       <div class="inner">
 
         <header>
-          <h1>Jeremyake1.GitHub.io</h1>
-          <h2></h2>
+          <h1>Jeremy Ake</h1>
+          <h2>Secure Software Design</h2>
         </header>
 
         <section id="downloads" class="clearfix">
